fix: ServantCard buttons wrapping incorrectly

--- a/src/views/ServantsList/ServantCard.module.css
+++ b/src/views/ServantsList/ServantCard.module.css
@@ -52,6 +52,15 @@
   }
 }
 
+.buttons {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+  row-gap: 1rem;
+}
+
 .info {
   grid-column: 1 / -1;
   background-color: var(--secondary);
